refactor(app): restructuring profiles and tests

--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -1,7 +1,7 @@
 logger.global.level = INFO
 
 database.driver = oracle.jdbc.driver.OracleDriver
-database.url =  jdbc:oracle:thin:@//cd.coatli.net:1521/XE
+database.url =  jdbc:oracle:thin:@//localhost:1521/XE
 database.username = backend
 database.password = backend123
 
