--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -2,8 +2,8 @@ logger.global.level = INFO
 
 database.driver = oracle.jdbc.driver.OracleDriver
 database.url =  jdbc:oracle:thin:@//localhost:1521/XE
-database.username = backend
-database.password = backend123
+database.username = employees
+database.password = employees123
 
 flyway.url = ${database.url}
 flyway.user = ${database.username}
