--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -4,7 +4,7 @@ monitor.key = inmemdb
 monitor.port = 11527
 monitor.daemon = true
 inmemdb.type = h2
-inmemdb.database = backendDB
+inmemdb.database = employeesDB
 inmemdb.username = sa
 inmemdb.password =
 
