--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
   <properties>
     <project.build.environment>prod</project.build.environment>
     <project.build.resourcesDirectory>${basedir}/src/main/resources</project.build.resourcesDirectory>
+    <project.build.testResourcesDirectory>${basedir}/src/test/resources</project.build.testResourcesDirectory>
     <project.build.filterDirectory>${basedir}/src/main/filters</project.build.filterDirectory>
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -156,6 +157,12 @@
         <filtering>true</filtering>
       </resource>
     </resources>
+    <testResources>
+      <testResource>
+        <directory>${project.build.testResourcesDirectory}</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
     <filters>
       <filter>${project.build.filterDirectory}/${project.build.environment}.properties</filter>
     </filters>
@@ -277,10 +284,10 @@
   
   <profiles>
     <profile>
-      <id>dev</id>
+      <id>mem</id>
       
       <properties>
-        <project.build.environment>dev</project.build.environment>
+        <project.build.environment>mem</project.build.environment>
         
         <h2.version>1.3.176</h2.version>
       </properties>
@@ -320,5 +327,25 @@
         </plugins>
       </build>
     </profile>
+    
+    <profile>
+      <id>dev</id>
+      
+      <properties>
+        <project.build.environment>dev</project.build.environment>
+        
+        <mysql.connector.java.version>5.1.36</mysql.connector.java.version>
+      </properties>
+      
+      <dependencies>
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.connector.java.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+    
   </profiles>
+  
 </project>
