--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -1,17 +1,9 @@
 logger.global.level = TRACE
 
-monitor.key = inmemdb
-monitor.port = 11527
-monitor.daemon = true
-inmemdb.type = h2
-inmemdb.database = employeesDB
-inmemdb.username = sa
-inmemdb.password =
-
-database.driver = org.h2.Driver
-database.url = jdbc:h2:tcp://localhost/mem:${inmemdb.database};DB_CLOSE_DELAY=-1
-database.username = ${inmemdb.username}
-database.password = ${inmemdb.password}
+database.driver = com.mysql.jdbc.Driver
+database.url = jdbc:mysql://localhost:13306/employeesDB
+database.username = backDB
+database.password = back123
 
 flyway.url = ${database.url}
 flyway.user = ${database.username}
