--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,58 +10,33 @@
   <display-name>Backend Guide for Java</display-name>
   <description>A reference for a Java backend with CXF, Spring and MyBatis.</description>
 
-  <!-- Spring, Spring Security -->
+  <!-- CXF Spring context -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:/META-INF/spring/back-context.xml</param-value>
+    <param-value>/WEB-INF/cxf/back-context.xml</param-value>
   </context-param>
-  
-  <filter>
-      <filter-name>localizationFilter</filter-name>
-      <filter-class>org.springframework.web.filter.RequestContextFilter</filter-class>
-  </filter>
-  
-  <!-- Spring Security -->
-  <filter>
-      <filter-name>springSecurityFilterChain</filter-name>
-      <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-  </filter>
-  
-  <filter-mapping>
-      <filter-name>localizationFilter</filter-name>
-      <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
-  <filter-mapping>
-      <filter-name>springSecurityFilterChain</filter-name>
-      <url-pattern>/*</url-pattern>
-  </filter-mapping>
   
   <!-- Spring -->
   <listener>
       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   
-  <!-- Spring MVC -->
+  <!-- CXF -->
   <servlet>
-      <servlet-name>appServlet</servlet-name>
-      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-      <init-param>
-          <param-name>contextConfigLocation</param-name>
-          <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
-      </init-param>
-      <load-on-startup>1</load-on-startup>
+    <servlet-name>CXFServlet</servlet-name>
+    <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
   </servlet>
   
   <servlet-mapping>
-      <servlet-name>appServlet</servlet-name>
-      <url-pattern>/</url-pattern>
+    <servlet-name>CXFServlet</servlet-name>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
   
   <!-- Disables Servlet Container welcome file handling.
        Needed for compatibility with Servlet 3.0 and Tomcat 7.0 -->
   <welcome-file-list>
-      <welcome-file></welcome-file>
+    <welcome-file></welcome-file>
   </welcome-file-list>
   
 </web-app>
