--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -8,3 +8,6 @@ database.password = back123
 flyway.url = ${database.url}
 flyway.user = ${database.username}
 flyway.password = ${database.password}
+
+back.host = http://localhost:8181
+back.context = backendguide
