--- a/src/main/filters/mem.properties
+++ b/src/main/filters/mem.properties
@@ -16,3 +16,6 @@ database.password = ${inmemdb.password}
 flyway.url = ${database.url}
 flyway.user = ${database.username}
 flyway.password = ${database.password}
+
+back.host = http://localhost:8181
+back.context = backendguide
