--- a/src/test/resources/META-INF/spring/test-back-context.properties
+++ b/src/test/resources/META-INF/spring/test-back-context.properties
@@ -1,5 +1,2 @@
-# Datasource placeholders
-datasource.driver = ${database.driver}
-datasource.url = ${database.url}
-datasource.username = ${database.username}
-datasource.password = ${database.password}
+# Employee API URLs
+employee.create.url = ${back.host}/${back.context}/employee/create
