--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -8,3 +8,5 @@ database.password = employees123
 flyway.url = ${database.url}
 flyway.user = ${database.username}
 flyway.password = ${database.password}
+
+back.context = backendguide
