--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <web-app
-    version="3.1"
     xmlns="http://xmlns.jcp.org/xml/ns/javaee"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="
-        http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+        http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    version="3.0">
     
   <display-name>Backend Guide for Java</display-name>
   <description>A reference for a Java backend with CXF, Spring and MyBatis.</description>
@@ -32,5 +32,11 @@
     <servlet-name>CXFServlet</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
+  
+  <resource-ref>
+    <res-ref-name>ds/backDS</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
   
 </web-app>
