--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -11,3 +11,10 @@ flyway.password = ${database.password}
 
 back.host = http://localhost:8181
 back.context = backendguide
+
+maven.tomcat.fork               = true
+maven.tomcat.path               = /${project.build.finalName}
+maven.tomcat.serverFile         = ${project.build.testResourcesDirectory}/META-INF/tomcat/server.xml
+maven.tomcat.contextFile        = ${project.build.testResourcesDirectory}/META-INF/tomcat/context.xml
+maven.tomcat.contextReloadable  = true
+maven.tomcat.port               = 8282
