test(employee rest): adjustment to it of the employee backend

--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -9,12 +9,10 @@ flyway.url = ${database.url}
 flyway.user = ${database.username}
 flyway.password = ${database.password}
 
-back.host = http://localhost:8181
+back.host = http://localhost:8080
 back.context = backendguide
 
 maven.tomcat.fork               = true
 maven.tomcat.path               = /${project.build.finalName}
 maven.tomcat.serverFile         = ${project.build.testResourcesDirectory}/META-INF/tomcat/server.xml
-maven.tomcat.contextFile        = ${project.build.testResourcesDirectory}/META-INF/tomcat/context.xml
-maven.tomcat.contextReloadable  = true
-maven.tomcat.port               = 8282
+#maven.tomcat.contextFile        = ${project.build.testResourcesDirectory}/META-INF/tomcat/context.xml
