--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,12 @@
     <jackson.databind.version>2.2.3</jackson.databind.version>
     <junit.version>4.11</junit.version>
     <mockito.version>1.10.19</mockito.version>
+    
+    <tomcat7.maven.plugin.version>2.2</tomcat7.maven.plugin.version>
   </properties>
 
   <dependencies>
+    <!-- MyBatis -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
@@ -77,6 +80,7 @@
       <artifactId>mybatis</artifactId>
       <version>${mybatis.version}</version>
     </dependency>
+    <!-- Spring -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -97,6 +101,7 @@
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <!-- CXF -->
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-frontend-jaxrs</artifactId>
@@ -107,6 +112,17 @@
       <artifactId>cxf-rt-frontend-jaxws</artifactId>
       <version>${cxf.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http</artifactId>
+      <version>${cxf.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-transports-http-jetty</artifactId>
+      <version>${cxf.version}</version>
+    </dependency>
+    <!-- Jackson -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-jaxrs</artifactId>
@@ -280,7 +296,10 @@
       <plugin>
         <groupId>org.apache.tomcat.maven</groupId>
         <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>${tomcat7.maven.plugin.version}</version>
+        <configuration>
+          <skip>${maven.test.skip}</skip>
+        </configuration>
         <executions>
           <execution>
             <id>tomcat7-maven-run</id>
