--- a/src/main/filters/dev.properties
+++ b/src/main/filters/dev.properties
@@ -1,18 +1,18 @@
 logger.global.level = TRACE
 
-database.driver = com.mysql.jdbc.Driver
-database.url = jdbc:mysql://localhost:13306/employeesDB
+database.driver   = com.mysql.jdbc.Driver
+database.url      = jdbc:mysql://localhost:3306/employeesDB
 database.username = backDB
 database.password = back123
 
-flyway.url = ${database.url}
-flyway.user = ${database.username}
+flyway.url      = ${database.url}
+flyway.user     = ${database.username}
 flyway.password = ${database.password}
 
-back.host = http://localhost:8080
-back.context = backendguide
+back.host = http://localhost
+back.port = 9080
 
-maven.tomcat.fork               = true
-maven.tomcat.path               = /${project.build.finalName}
-maven.tomcat.serverFile         = ${project.build.testResourcesDirectory}/META-INF/tomcat/server.xml
-#maven.tomcat.contextFile        = ${project.build.testResourcesDirectory}/META-INF/tomcat/context.xml
+maven.tomcat.path        = /${back.context}
+maven.tomcat.fork        = true
+maven.tomcat.contextFile = ${project.build.testResourcesDirectory}/META-INF/tomcat/context.xml
+maven.tomcat.port        = ${back.port}
