--- a/src/test/resources/META-INF/spring/test-back-context.properties
+++ b/src/test/resources/META-INF/spring/test-back-context.properties
@@ -1,2 +1,2 @@
 # Employee API URLs
-employee.create.url = ${back.host}/${back.context}/employee/create
+employee.create.url = ${back.host}:${back.port}/${back.context}/employee/create
